# Alliance-HPM-Dev

./: .clang-format  .clang-tidy  .clangd  .dockerignore  .envrc  .gitignore  .gitmodules  Dockerfile  README.md
.devcontainer/: devcontainer.json
tools/scripts/: build_ui.sh  install-hpm-openocd.sh  install-jlink.sh
user_template/: Makefile  README_en.md  README_zh.md
user_template/scripts/: flash_target.sh
user_template/user_app/: CMakeLists.txt
user_template/user_app/linkers/gcc/: user_linker.ld
user_template/user_app/src/: main.c
user_template/user_board/: CMakeLists.txt  board.c  board.h  pinmux.c  pinmux.h  user_board.cfg  user_board.yaml
